update on savings and users
